add update task

--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -16,6 +16,7 @@
     <ul>
         {% for task in tasks %}
             <li>{{ task.title }}</li>
+            <a href="update_task/{{task.id}}">Update</a>
         {% endfor %}
     </ul>
 </body>
