--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasks</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+
 </head>
 <body>
-    <form method="POST" action="/">
-        {% csrf_token %}
-        {{ form.title }}
-        <input type="submit" name="Create Task">
-    </form>
-    
-    <ul>
-        {% for task in tasks %}
-            <li>{{ task.title }}</li>
-            <a href="update_task/{{task.id}}">Update</a>
-        {% endfor %}
-    </ul>
+    <div class="center-column">
+        <form method="POST" action="/">
+            {% csrf_token %}
+            {{ form.title }}
+            <input type="submit" name="Create Task" class="btn btn-info">
+        </form>
+        
+        <div class="todo-list">
+            {% for task in tasks %}
+                <div class="item-row">
+                    <a href="update_task/{{task.id}}" class="btn btn-sm btn-info">Update</a>
+                    <a href="delete_task/{{task.id}}" class="btn btn-sm btn-danger">Delete</a>
+                    {% if task.status == True %}
+                        <strike>{{ task.title }}</strike>
+                    {% else %}
+                        <span>{{ task.title }}</span>
+                    {% endif %}
+                </div>    
+            {% endfor %}
+            
+        </div>
+    </div>
 </body>
 </html>
 
