--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -14,6 +14,15 @@
 </head>
 <body>
     <div class="center-column">
+
+        {% if request.user.is_authenticated %}
+            <p>{{ request.user }}</p>
+            <a href="logout/">Logout</a>
+        {% else %}
+            <a href="login/">Login</a>
+        {% endif %}
+
+        <hr>
         <form method="POST" action="/">
             {% csrf_token %}
             {{ form.title }}
@@ -26,9 +35,9 @@
                     <a href="update_task/{{task.id}}" class="btn btn-sm btn-info">Update</a>
                     <a href="delete_task/{{task.id}}" class="btn btn-sm btn-danger">Delete</a>
                     {% if task.status == True %}
-                        <strike>{{ task.title }}</strike>
+                        <span style="margin: 20px"><strike >{{ task.title }}</strike></span>
                     {% else %}
-                        <span>{{ task.title }}</span>
+                        <span style="margin: 20px">{{ task.title }}</span>
                     {% endif %}
                 </div>    
             {% endfor %}
