--- a/tasks/templates/tasks/update_task.html
+++ b/tasks/templates/tasks/update_task.html
@@ -18,9 +18,9 @@
             <form method="POST">
                 {% csrf_token %}
                 {{ form }}
-                <input type="submit" name="Confirm" class="btn btn-sm btn-danger" style="width: 100px;">
+                <input type="submit" name="Confirm" class="btn btn-sm btn-info" style="width: 100px;">
             </form>
-            <a href="{% url 'list tasks' %}" class="btn btn-sm btn-info" style="width: 100px;">Cancel</a>
+            <a href="{% url 'list tasks' %}"  class="btn btn-sm btn-danger" style="width: 100px;">Cancel</a>
         
     </div>  
 </body>
