--- a/tasks/templates/tasks/register.html
+++ b/tasks/templates/tasks/register.html
@@ -1,13 +1,13 @@
 {% extends "tasks/base.html" %}
 
 {% block content %}
-    <h1>Login</h1>
+    <h1>Register</h1>
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Login">
+        <input type="submit" value="Register">
     </form>
 
-    <p>Don't have an account? <a href="{% url 'register' %}">Register</a> </p>
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a> </p>
 {% endblock %}
 
