--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -1,38 +1,71 @@
 {% extends "tasks/base.html" %}
 
 {% block content %}
-        {% if request.user.is_authenticated %}
-            <p>{{ request.user }}</p>
-            <a href="logout/">Logout</a>
-        {% else %}
-            <a href="login/">Login</a>
-        {% endif %}
 
-        <hr>
-        <a href="{% url 'create task' %}">Add Task</a>
+        <div class="header-bar">
+            <div class="">
+                <h1>Hello {{ request.user.username|title }}</h1>
+                <h3 style="margin:0">You have <i>{{ count }}</i> incomplete task{{ count|pluralize:"s" }}</h3>
+            </div>
+
+            {% if request.user.is_authenticated %}
+                <a href="logout/">Logout</a>
+            {% else %}
+                <a href="login/">Login</a>
+            {% endif %}
+        </div>
         
-        <h4>Count Tasks - {{ count }}</h4>
+        <div id="search-add-wrapper">
+            <form method="GET" style="margin-top: 20px; display: flex;">
+                <input type="text" name="search-area" value="{{ search_input }}">
+                <input class="button" type="submit" value="Search">
+            </form>
+            <a id="add-link" href="{% url 'create task' %}">&#x2b;</a>
+        </div>
+        
+        
 
-        <form method="GET" action="">
-            <input type="text" name="search-area" value="{{ search_input }}">
-            <input type="submit" value="Search">
-        </form>
+        <div class="task-items-wrapper">
+            {% for task in tasks %}
+                <div class="task-wrapper">
+                    {% if task.status %}
+                        <div class="task-title">
+                            <div class="task-complete-icon"></div>
+                            <i><s><a href="{% url 'update task' task.id %}">{{ task }}</a></s></i>
+                        </div>
+                        <a class="delete-link" href="{% url 'delete task' task.id %}">&#215;</a>
+                    {% else %}
+                        <div class="task-title">
+                            <div class="task-incomplete-icon"></div>
+                            <a href="{% url 'update task' task.id %}">{{ task }}</a>    
+                        </div>
+                        <a class="delete-link" href="{% url 'delete task' task.id %}">&#215;</a>
+                    {% endif %}
+                    
+                   
 
-        {% for task in tasks %}
-            
+                </div>
+
+                
+            {% empty %}
+                <h3>No items in list</h3>
+            {% endfor %}
+        </div>
+        
+<!--             
                 <div class="item-row">
-                    <a href="{% url 'detail task' task.id %}">Detail</a>
-                    <a href="{% url 'update task' task.id %}">Update</a>
-                    <a href="{% url 'delete task' task.id %}">Delete</a>
+                    <a href="">Detail</a>
+                   <a href="">Update</a>
+                
 
                     {% if task.status == True %}
                         <span style="margin: 20px"><strike >{{ task.title }}</strike></span>
                     {% else %}
                         <span style="margin: 20px">{{ task.title }}</span>
                     {% endif %}
-                </div>
+                </div> -->
             
-        {% endfor %}
+        
 {% endblock %}            
 
 
