--- a/tasks/static/style.css
+++ b/tasks/static/style.css
@@ -1,43 +1,122 @@
-
 body{
-	background-color: red;
+	background-color: #FAFAFA;
+	font-family: 'Nunito', sans-serif;
+	padding-top: 50px;
 }
 
-input{
-	width: 100%;
-	padding: 10px 20px;
-	margin: 8px 0;
-	box-sizing: border-box;
+h1, h2, h3, h4, h5,
+	{
+	font-family: 'Raleway', sans-serif;	
 }
 
-input::placeholder {
-  color: #d3d3d3;
+a,p{
+	color: #4b5156;
 }
 
-.submit{
-	background-color: #6BA3E8;
+.container{
+	max-width: 550px;
+	margin: auto;
+	background-color: #fff;
+	-webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
+	box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
+
 }
 
-.center-column{
-	width:600px;
-	margin: 20px auto;
-	padding:20px;
-	background-color: rgb(242, 206, 234);
-	border-radius: 3px;
-	box-shadow: 6px 2px 30px 0px rgba(0,0,0,0.75);
-}
-
-.item-row{
-	background-color: #a072d9;
-	margin: 10px;
-	padding: 20px;
-	border-radius: 3px;
+.header-bar{
+	display: flex;
+	justify-content: space-between;
 	color: #fff;
-	font-size: 16px;
-	box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
+	padding: 10px;
+	border-radius: 5px 5px 0 0;
+	background: linear-gradient(90deg, #EEA390 0%, #EB796F 43%, #EB796F 100%);
 }
 
-.btn-danger{
-	background-color: #ffae19;
-	border-color: #e59400;
+.header-bar a{
+	color: rgb(247, 247, 247);
+	text-decoration: none;
+}
+
+.task-wrapper{
+	display: flex;
+	align-items:  center;
+	justify-content: space-between;
+	padding: 20px;
+	background-color: #fff;
+	border-top: 1px solid rgb(226, 226, 226);
+}
+
+.task-title{
+	display: flex;
+}
+
+.task-title a{
+	text-decoration: none;
+	color: #4b5156;
+	margin-left: 10px;
+}
+
+.task-complete-icon{
+	height: 20px;
+	width: 20px;
+	background-color: rgb(105, 192, 105);
+	border-radius: 50%;
+}
+
+.task-incomplete-icon{
+	height: 20px;
+	width: 20px;
+	background-color: rgb(218, 218, 218);
+	border-radius: 50%;
+}
+
+.delete-link{
+	text-decoration: none;
+	font-weight: 900;
+	color: #cf4949;
+	font-size: 22px;
+	line-height: 0;
+}
+
+#search-add-wrapper{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+}
+
+#add-link{
+	color: #EB796F;
+	text-decoration: none;
+	font-size: 42px;
+	text-shadow: 1px 1px #81413b;
+}
+
+input[type=text],
+input[type=password],
+textarea{
+	border: 1px solid #EB796F;
+	border-radius: 5px;
+	padding: 10px;
+	width: 90%;
+}
+
+label{
+	padding-top: 10px !important;
+	display: block;
+}
+
+.button{
+	border: 1px solid #EB796F;
+	background-color: #FAFAFA;
+	color: #EB796F;
+	margin-left: 3px;
+	padding: 10px;
+	font-size: 14px;
+	border-radius: 5px;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+.card-body{
+	padding: 20px;
 }
