--- a/tasks/templates/tasks/create_task.html
+++ b/tasks/templates/tasks/create_task.html
@@ -1,12 +1,20 @@
 {% extends "tasks/base.html" %}
 
 {% block content  %}
-    <h2>Add Task</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="Confirm" class="btn btn-sm btn-info" style="width: 100px;">
-    </form>
-    <a href="{% url 'list tasks' %}"  class="btn btn-sm btn-danger" style="width: 100px;">Go Back</a>
+
+    <div class="header-bar">
+        <a href="{% url 'list tasks' %}">&#8592; Back</a>
+    </div>
+
+    <div class="card-body">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" name="Confirm" class="button">
+        </form>
+    </div>
+
+    
+    
         
 {% endblock %}
