--- a/tasks/templates/tasks/login.html
+++ b/tasks/templates/tasks/login.html
@@ -1,13 +1,22 @@
 {% extends "tasks/base.html" %}
 
 {% block content %}
-    <h1>Login</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Login">
-    </form>
 
-    <p>Don't have an account? <a href="{% url 'register' %}">Register</a> </p>
+    <div class="header-bar">
+        <h1>Register</h1>
+    </div>
+    
+    <div class="card-body">
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Login" class="button">
+        </form>
+
+        <p>Don't have an account? <a href="{% url 'register' %}">Register</a> </p>
+    </div>
+    
+
+    
 {% endblock %}
 
