--- a/tasks/templates/tasks/login.html
+++ b/tasks/templates/tasks/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="header-bar">
-        <h1>Register</h1>
+        <h1>Login</h1>
     </div>
     
     <div class="card-body">
